Serial optimization exercises

--- a/serial-optimization.ipynb
+++ b/serial-optimization.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "20a127ea",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "5d8c0a08",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "36.2 ms ± 711 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "58.1 ms ± 159 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "7e887ef1",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "263669b4",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "f8b59c6d",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "f9c12b96",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.72 ms ± 28.8 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "457 μs ± 8.19 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "ff424d70",
    "metadata": {},
    "outputs": [],
@@ -252,39 +252,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "827b4c53",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Timer unit: 1e-09 s\n",
-      "\n",
-      "Total time: 1.17552 s\n",
-      "File: /tmp/ipykernel_2855/3916854312.py\n",
-      "Function: monte_carlo_pi at line 3\n",
-      "\n",
-      "Line #      Hits         Time  Per Hit   % Time  Line Contents\n",
-      "==============================================================\n",
-      "     3                                           def monte_carlo_pi(num_samples):\n",
-      "     4         1        600.0    600.0      0.0      inside_circle = 0\n",
-      "     5   1000001  108869600.0    108.9      9.3      for _ in range(num_samples):\n",
-      "     6   1000000  700355101.0    700.4     59.6          x, y = random.uniform(-1, 1), random.uniform(-1, 1)\n",
-      "     7   1000000  261651600.0    261.7     22.3          if x**2 + y**2 <= 1:\n",
-      "     8    784967  104646900.0    133.3      8.9              inside_circle += 1\n",
-      "     9         1        800.0    800.0      0.0      return (inside_circle / num_samples) * 4"
-     ]
-    }
-   ],
-   "source": [
-    "%load_ext line_profiler\n",
-    "%lprun -f monte_carlo_pi monte_carlo_pi(1_000_000)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6a9b8532",
    "metadata": {},
@@ -336,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "53a0c22f",
    "metadata": {},
    "outputs": [],
@@ -349,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "72ed1aa9",
    "metadata": {},
    "outputs": [
@@ -357,7 +324,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "80.9 ms ± 450 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "894 ms ± 5.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -377,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "7fa41eff",
    "metadata": {},
    "outputs": [],
@@ -396,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "601a3342",
    "metadata": {},
    "outputs": [
@@ -404,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60.7 ns ± 0.626 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+      "65.4 ns ± 0.416 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
      ]
     }
    ],
@@ -433,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "25eac273",
    "metadata": {},
    "outputs": [],
@@ -449,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "3612a294",
    "metadata": {},
    "outputs": [
@@ -457,7 +424,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "257 ns ± 469 ns per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "300 ns ± 532 ns per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -485,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "id": "9c349035",
    "metadata": {},
    "outputs": [],
@@ -606,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5cb4f883",
    "metadata": {},
    "outputs": [
@@ -614,7 +581,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "290 μs ± 8.74 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "289 μs ± 2.83 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -645,14 +612,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "id": "4c6f2d96",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from numba import njit\n",
+    "from numba import jit\n",
     "\n",
-    "@njit()\n",
+    "@jit(nopython = True)\n",
     "def sieve_primes_numba(n):\n",
     "    is_prime = np.ones(n + 1, dtype=np.uint8) # Create a boolean array\n",
     "    is_prime[:2] = 0  # 0 and 1 are not prime numbers\n",
@@ -664,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "id": "10b49e26",
    "metadata": {},
    "outputs": [
@@ -672,7 +639,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "196 μs ± 981 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "205 μs ± 10.3 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -684,10 +651,169 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cc2e0e80",
+   "metadata": {},
+   "source": [
+    "On our computer, simply adding the decorator leads to an average speed of 196 microseconds, approximately a 1/3rd speedup for essentially no effort. Compilation often results in much faster speedups, however, this implementation already used vectorised operations, and the Sieve of Eratosthenes is already fairly optimal.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "26eba7b0",
    "metadata": {},
    "source": [
-    "### Compilation exercises"
+    "### Compilation exercises\n",
+    "\n",
+    "We revisit here the Julia Set code from the profiling exercises. If you've forgotten them, take a moment to refamiliarise yourself. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0db12b37",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**Q3.1 Remind yourself, how fast was the `calc_z_serial_python()` function before?**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d6201f7",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**Q3.2 Use Numba to JIT compile the function. Try with and without nopython mode. How fast is it now?**\n",
+    "\n",
+    "<details>\n",
+    "<summary>I need a hint</summary>\n",
+    "\n",
+    "Edit the code in the `julia_set.py` file. Use the decorators mentioned and time the use of the function.\n",
+    "<details>\n",
+    "<summary>I need a bigger hint</summary>\n",
+    "\n",
+    "Use `@jit()` or `@njit()` on the `calc_z_serial_python()` function, and call the code from the terminal. \n",
+    "<details>\n",
+    "<summary>Give me the code</summary>\n",
+    "\n",
+    "```{Python}\n",
+    "@jit\n",
+    "def calc_z_serial_python(maxiter, zs, c):\n",
+    "  #' Calculate the Julia set for a given set of complex numbers and a constant c.\n",
+    "  output = [0] * len(zs)\n",
+    "  for i in range(len(zs)):\n",
+    "    z = zs[i]\n",
+    "    n = 0\n",
+    "    while abs(z) <= 2 and n < maxiter:\n",
+    "      z = z * z + c\n",
+    "      n += 1\n",
+    "    output[i] = n\n",
+    "  return output\n",
+    "```\n",
+    "\n",
+    "In the CLI:\n",
+    "\n",
+    "```{python}\n",
+    "python julia_set.py\n",
+    "```\n",
+    "</details>\n",
+    "</details>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc5ec1d7",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**Q3.3 How long does the compiled function take on the first run? How long on the second?**\n",
+    "\n",
+    "<details>\n",
+    "<summary>I need a hint</summary>\n",
+    "\n",
+    "Edit the code in the `julia_set.py` file to call the function once or twice. Time them.\n",
+    "<details>\n",
+    "<summary>I need a bigger hint</summary>\n",
+    "\n",
+    "You can add time points before and after running the function in `run_julia_set()` Then call `run_julia_set()` twice in `__main__`. \n",
+    "<details>\n",
+    "<summary>Give me the code</summary>\n",
+    "\n",
+    "```{Python}\n",
+    "  start = time.time()\n",
+    "  output = calc_z_serial_python(max_iterations, zs, CONSTVAL) # second run, fully compiled\n",
+    "  end = time.time()\n",
+    "\n",
+    "\n",
+    "  ...\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "  run_julia_set(desired_width = 1000, max_iterations = 300)\n",
+    "  run_julia_set(desired_width = 1000, max_iterations = 300)\n",
+    "```\n",
+    "\n",
+    "In the CLI:\n",
+    "\n",
+    "```{python}\n",
+    "python julia_set.py\n",
+    "```\n",
+    "</details>\n",
+    "</details>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0998b26b",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**Q3.4 Does `run_julia_set()` still spend the majority of its time in the `calc_z_serial_python()` function?**\n",
+    "\n",
+    "<details>\n",
+    "<summary>I need a hint</summary>\n",
+    "\n",
+    "Use line profiling.\n",
+    "<details>\n",
+    "<summary>I need a bigger hint</summary>\n",
+    "\n",
+    "Add the `@profile` decorator to the `run_julia_set()` function and run from the CLI.\n",
+    "<details>\n",
+    "<summary>Give me the code</summary>\n",
+    "\n",
+    "```{Python}\n",
+    "from line_profiler import profile\n",
+    "...\n",
+    "...\n",
+    "@profile\n",
+    "def run_julia_set(desired_width, max_iterations):\n",
+    "  ...\n",
+    "```\n",
+    "\n",
+    "In the CLI:\n",
+    "\n",
+    "```{python}\n",
+    "LINE_PROFILE=1 python julia_set.py\n",
+    "```\n",
+    "</details>\n",
+    "</details>\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e798778",
+   "metadata": {},
+   "source": [
+    "**Q3.5 Would you use compilation even though we only (in this example) call the compiled function once?**\n",
+    "\n",
+    "<details>\n",
+    "<summary>My thoughts</summary>\n",
+    "\n",
+    "On my computer, compiling the `calc_z_serial_python()` function means the function takes 1.02 seconds (including compilation) rather than 3.23 seconds, a 3-fold speedup even with the added compilation time. Post-compilation, it takes 0.76 seconds per call. However, compiling `calc_complex_numbers()` adds more overhead - with no compilation the function takes 0.09 seconds, with compilation overhead it takes 0.23 seconds, and post-compilation it takes 0.04 seconds. If I knew I would only call this once, I'd compile the first function but not the second.\n",
+    "\n",
+    "Note that if you *run the script* multiple times, but the script only runs the function once, you incur the compilation cost multiple times as well. There is no substitute for measuring.\n",
+    "</details>"
    ]
   }
  ],
