--- a/profiling.ipynb
+++ b/profiling.ipynb
@@ -239,6 +239,38 @@
    "id": "20",
    "metadata": {},
    "source": [
+    "#### Visualising your cProfile results: Snakeviz\n",
+    "There is a very handy package, if you don't like tables or want to show your profiling results to other people, called `snakeviz`. It's not necessary, so I didn't include it as part of the workshop requirements, but you can install it via pip/conda.\n",
+    "\n",
+    "```python\n",
+    "pip install snakeviz\n",
+    "```\n",
+    "\n",
+    "If you've generated a `.prof` file, you can visualise this using the package. By default, it will give you an icicle plot showing you the function calls traced.\n",
+    "\n",
+    "```bash\n",
+    "snakeviz fib_stats.prof\n",
+    "```\n",
+    "\n",
+    "You can also use it in a Notebook. It provides the `%snakeviz` and `%%snakeviz` magics which profile either a line or a code block, and automatically launch the visualisation. Remember to load the extension first, though."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext snakeviz\n",
+    "%snakeviz fib(30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22",
+   "metadata": {},
+   "source": [
     "### line_profiler\n",
     "`cprofile` is very useful, and it can tell you which functions are being called most, and how much time they're taking. If you've split your code into smaller functions (usually best practice) then it can really narrow down where the majority of your computation is happening. However, it still can't identify the lines of code where time is being taken - if your function is 5 lines of code all you know is that it is *somewhere* in that 5 lines of code.\n",
     "\n",
@@ -258,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "25",
    "metadata": {},
    "source": [
     "## Profiling Exercises\n",
@@ -290,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "27",
    "metadata": {},
    "source": [
     "The white regions of space are those values where even after 300 iterations of $f(z)$, the sequence of values has not \"escaped\" outside this region of the complex plane - rather, the sequence simply jumps around unpredictably. The black areas are those areas where applying $f(z)$ leads to immediate escape, and therefore 0 iterations. As you can see, it leads to a pretty (and fractal!) pattern."
@@ -308,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "28",
    "metadata": {},
    "source": [
     "**Q1. Have a look at the code. Run it in the CLI. How long does it take to run on your machine? Feel free to edit the code. Write the total time down**\n",
@@ -337,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "29",
    "metadata": {},
    "source": [
     "**Q2: Where do you think any bottlenecks might be? Write down your hypothesis.**"
@@ -345,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "30",
    "metadata": {},
    "source": [
     "**Q3: What functions do you think are called most in `run_julia_set(1000, 300)`? Think about it, then try and profile it. Is it what you expect?**\n",
@@ -377,16 +409,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "32",
    "metadata": {},
    "source": [
     "**Q4: What part of `calc_z_serial_python()` do you *expect* to take the longest? What actually takes the longest?**\n",
@@ -414,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "33",
    "metadata": {},
    "source": [
     "**Q6: The same as Q5 for `calc_complex_numbers()`. What part(s) do you expect, and what in actuality, takes the longest?**\n",
@@ -442,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "34",
    "metadata": {},
    "source": [
     "**Q6: With all the information you have gained, was your hypothesis about the bottleneck right?**"
@@ -450,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "35",
    "metadata": {},
    "source": [
     "**Q7: With all the information you now have, what areas of the code do you think you should focus on optimizing if you wanted to make the calculations faster?**"
