parallel julia set

--- a/parallel-optimization.ipynb
+++ b/parallel-optimization.ipynb
@@ -317,6 +317,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f6a21215",
+   "metadata": {},
+   "source": [
+    "\n",
+    "**Q2.3: Can you use parallel programming to speed up calculation of the Julia set? What proportion of the code do you think can be parallelised? Implement it.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "13",
    "metadata": {},
    "source": [
@@ -325,7 +334,7 @@
     "We will end here, as we have covered a fair few different techniques for speeding up code. Your final exercise, assuming there is enough time, is to *either*:\n",
     "\n",
     "1. Work on your own code. Profile it, and see if and where you can apply the things you have learned in this workshop, and any speedup that results.\n",
-    "2. Work on the `unique_paths.py` code. This code generates the number of unique paths from the top-left to the bottom-right, in an `m * n` grid, when you can only move right or down. Time and profile this, and see if you how fast you can make it."
+    "2. Work on the `unique_paths.py` code. This code generates the number of unique paths from the top-left to the bottom-right, in an `m * n` grid, when you can only move right or down. Time and profile this, and see how fast you can make it."
    ]
   }
  ],
