--- a/serial-optimization.ipynb
+++ b/serial-optimization.ipynb
@@ -101,15 +101,7 @@
    "id": "8",
    "metadata": {},
    "source": [
-    "The following code, which calculates pi using Monte Carlo integration, is provided. Answer the following questions:\n",
-    "1. Is it correct?\n",
-    "2. How long does it take to run?\n",
-    "3. Where is the most time taken, cumulatively?\n",
-    "\n",
-    "Then:\n",
-    "1. Vectorize the code\n",
-    "2. Verify the outputs\n",
-    "3. Measure any speedup."
+    "The following code, which calculates pi using Monte Carlo integration, is provided. Answer the following questions."
    ]
   },
   {
@@ -250,7 +242,7 @@
     "<details>\n",
     "<summary>I need a bigger hint</summary>\n",
     "\n",
-    "`numpy` has functions that vectorise random number generation, and allows you to vectorise exponentiation.\n",
+    "`numpy` has functions that vectorise random number generation, and allows you to vectorise exponentiation, summing, calculating means etc. Consider `np.random.uniform()` and `np.mean()`\n",
     "<details>\n",
     "<summary>Give me the code</summary>\n",
     "\n",
@@ -763,7 +755,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -777,7 +769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
